--- a/man/latest/fccanalysis.html
+++ b/man/latest/fccanalysis.html
@@ -75,7 +75,8 @@
 <section class="Sh">
 <h1 class="Sh" id="SEE_ALSO"><a class="permalink" href="#SEE_ALSO">SEE
   ALSO</a></h1>
-<p class="Pp">fccanalysis-run(1), fccanalysis-script(7)</p>
+<p class="Pp">fccanalysis-run(1), fccanalysis-submit(1),
+  fccanalysis-script(7)</p>
 </section>
 <section class="Sh">
 <h1 class="Sh" id="BUGS"><a class="permalink" href="#BUGS">BUGS</a></h1>
