deploy: 12b8698967b66b7d4a2d2547cf682115f20478ce

--- a/man/latest/fccanalysis-script.html
+++ b/man/latest/fccanalysis-script.html
@@ -236,7 +236,9 @@
     Default value: user</dd>
   <dt id="test_file"><a class="permalink" href="#test_file"><b>test_file</b>
     (optional)</a></dt>
-  <dd>Location of the test file.
+  <dd>Location of the test file provided as a string (<b>str</b>) or a template
+      (<b>string.Template</b>). In case of the template two variables are
+      supported: <b>key4hep_os</b> and <b>key4hep_stack</b>.
     <br/>
     Default value: empty string</dd>
   <dt id="graph"><a class="permalink" href="#graph"><b>graph</b>
