deploy: 996ffc98f67319d35ed4cdfcf0a3ca8291b5eef2

--- a/man/latest/fccanalysis-pin.html
+++ b/man/latest/fccanalysis-pin.html
@@ -21,8 +21,7 @@
 <div class="manual-text">
 <section class="Sh">
 <h1 class="Sh" id="NAME"><a class="permalink" href="#NAME">NAME</a></h1>
-<p class="Pp"><b>fccanalysis-pin</b> &#x2013; pin version of the Key4hep
-  stack</p>
+<p class="Pp"><b>fccanalysis-pin</b> &#x2013; pin the Key4hep stack version</p>
 </section>
 <section class="Sh">
 <h1 class="Sh" id="SYNOPSIS"><a class="permalink" href="#SYNOPSIS">SYNOPSIS</a></h1>
@@ -33,8 +32,8 @@
 <h1 class="Sh" id="DESCRIPTION"><a class="permalink" href="#DESCRIPTION">DESCRIPTION</a></h1>
 <p class="Pp"><b>fccanalysis-pin allows one to freeze the Key4hep stack version
     for the local</b> copy of the FCCAnalyses. To create the &quot;pin&quot;
-    first make sure that you have sourced Key4hep stack and after that simply
-    run</p>
+    first make sure that you have sourced the desired Key4hep stack and after
+    that simply run</p>
 <dl class="Bl-tag">
   <dt></dt>
   <dd>fccanalysis pin
@@ -102,7 +101,7 @@
 </div>
 <table class="foot">
   <tr>
-    <td class="foot-date">18 Jul 2024</td>
+    <td class="foot-date">24 Sep 2025</td>
     <td class="foot-os">0.11.0</td>
   </tr>
 </table>
