deploy: b8de37355e7f14685400492a02d03f3f0bbc8735

--- a/man/latest/fccanalysis-run.html
+++ b/man/latest/fccanalysis-run.html
@@ -88,7 +88,8 @@
   <dt id="j"><a class="permalink" href="#j"><b>-j</b> <i>NCPUS</i>,
     <b>--ncpus</b> <i>NCPUS</i> (deprecated), <b>--n-threads</b>
     NTHREADS</a></dt>
-  <dd>Set number of jobs (threads).</dd>
+  <dd>Set number of jobs (threads) to use. The default number of threads to use
+      is 1. To use all threads available on the machine specify -1.</dd>
   <dt id="g"><a class="permalink" href="#g"><b>-g</b>, <b>--graph</b></a></dt>
   <dd>The computational graph of the analysis will be generated.</dd>
   <dt id="graph"><a class="permalink" href="#graph"><b>--graph-path</b>
