deploy: 2409021c083939a6ac599c74e7ede9e56c71aa70

--- a/man/latest/fccanalysis-final-script.html
+++ b/man/latest/fccanalysis-final-script.html
@@ -92,6 +92,12 @@
   <dd>Whether to scale the results to the expected integrated luminosity.
     <br/>
     Default value: True</dd>
+  <dt id="doWeighted"><a class="permalink" href="#doWeighted"><b>doWeighted</b>
+    or <b>do_weighted</b> (optional)</a></dt>
+  <dd>Whether to use sum of weights to scale the results. Requires
+      <i>doScale</i> to be true.
+    <br/>
+    Default value: False</dd>
   <dt id="intLumi"><a class="permalink" href="#intLumi"><b>intLumi</b>
     (optional)</a></dt>
   <dd>Expected integrated luminosity in pb^{-1}.
@@ -155,7 +161,7 @@
 </div>
 <table class="foot">
   <tr>
-    <td class="foot-date">05 Aug 2024</td>
+    <td class="foot-date">13 Nov 2025</td>
     <td class="foot-os">0.11.0</td>
   </tr>
 </table>
