deploy: 81e60675771315e0af91bc2925d451d9df211768

--- a/man/latest/fccanalysis.html
+++ b/man/latest/fccanalysis.html
@@ -101,7 +101,7 @@
 <h1 class="Sh" id="LINKS"><a class="permalink" href="#LINKS">LINKS</a></h1>
 <p class="Pp"><a class="Lk" href="https://hep-fcc.github.io/FCCAnalyses/">FCCAnalyses
     webpage</a></p>
-<p class="Pp"><a class="Lk" href="https://github.com/HEP-FCC/FCCAnalyses/">FCCAnalysises
+<p class="Pp"><a class="Lk" href="https://github.com/HEP-FCC/FCCAnalyses/">FCCAnalyses
     GitHub repository</a></p>
 <p class="Pp"><a class="Lk" href="https://fccsw-forum.web.cern.ch/">FCCSW
     Forum</a></p>
